# raylib_imgui_template

./: .clangd  .gitignore  CMakeLists.txt  build.cmd  build.sh  build_and_run.cmd  configure.cmd  configure.sh  rebuild.cmd  run.sh  run_tests.cmd
cmake/: imgui.cmake  raylib.cmake  rlimgui.cmake
src/: main.cpp  main.h
